# matrix_multiplication_openmpi

./: .gitignore  CMakeLists.txt  README.md  example_matrix.txt  example_vector.txt  main.c  matric.c  matrix.c  matrix.h  matrix_operations.c  matrix_operations.h  process_transmissions.c  process_transmissions.h  read_input_file.c  read_input_file.h  read_write_file.c  read_write_file.h  send_recv_matrix.c  send_recv_matrix.h  transmission_flags.h
